<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        
        android:id="@+id/display_mode_rela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/display_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/display_mode"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/display_modeValue"
            style="@style/valueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/display_mode"
            android:layout_gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/brightness_rela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/brightness"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/brightnessValue"
            style="@style/valueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/brightness"
            android:layout_gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/color_temp_rela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/color_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/color_temp"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/color_tempValue"
            style="@style/valueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/color_temp"
            android:layout_gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/hdr_rela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/hdr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/hdr"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/hdrValue"
            style="@style/valueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/hdr"
            android:layout_gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/smart_color_rela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/smart_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/smart_color"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/smart_colorValue"
            style="@style/valueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/smart_color"
            android:layout_gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sharpen_rela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sharpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/sharpen"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/sharpenValue"
            style="@style/valueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sharpen"
            android:layout_gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noise_reduction_rela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/noise_reduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/noise_reduction"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/noise_reductionValue"
            style="@style/valueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/noise_reduction"
            android:layout_gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reset_reduction_rela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/reset"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/resetValue"
            style="@style/valueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/reset"
            android:layout_gravity="center" />
    </RelativeLayout>

</LinearLayout>